--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.8",
     "react-spring": "^9.5.5",
     "resize-observer-polyfill": "^1.5.1",
     "web-vitals": "^2.1.4"
