minor fix for public IP address

--- a/frontend/Makefile
+++ b/frontend/Makefile
@@ -10,5 +10,5 @@ build-local:
 build-production:
 	docker build -t react-app-production:production \
 	--build-arg CADDYFILE=Caddyfile \
-	--build-arg BASE_URL=http://localhost:3001/ \
+	--build-arg BASE_URL=http://103.190.121.89:3001 \
 	-f Dockerfile .
