--- a/frontend/Caddyfile
+++ b/frontend/Caddyfile
@@ -1,8 +1,27 @@
 http://localhost:80 {
     root * /srv
     route {
-        reverse_proxy /api* api-server:3001
+        reverse_proxy /api/* api-server:3001/
         try_files {path} /index.html
         file_server
     }
 }
+
+:80 {
+    root * /srv
+    route {
+        reverse_proxy /api/* api-server:3001/
+        try_files {path} /index.html
+        file_server
+    }
+}
+
+http://103.190.121.89:80 {
+    root * /srv
+    route {
+        reverse_proxy /api/* api-server:3001/
+        try_files {path} /index.html
+        file_server
+    }
+}
+
